unpackaged/main/default/objects/jotform__JotformUser__c/jotform__JotformUser__c.object-meta.xml
<CustomObject>
    <label>JotformUser</label>
    <nameField>
        <displayFormat>JU-{0000}</displayFormat>
        <label>JotformUser Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JotformUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>