unpackaged/main/default/objects/jotform__JotformUser__c/fields/jotform__AccountType__c.field-meta.xml
<CustomField>
    <fullName>jotform__AccountType__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REGULAR</fullName>
                <default>true</default>
                <label>REGULAR</label>
            </value>
            <value>
                <fullName>ENTERPRISE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>