unpackaged/main/default/objects/jotform__JotformUser__c/fields/jotform__ApiUrl__c.field-meta.xml
<CustomField>
    <fullName>jotform__ApiUrl__c</fullName>
    <defaultValue>(&quot;https://api.jotform.com/&quot;)</defaultValue>
    <label>ApiUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>