unpackaged/main/default/objects/jotform__JotformUser__c/fields/jotform__Status__c.field-meta.xml
<CustomField>
    <fullName>jotform__Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>