unpackaged/main/default/objects/jotform__JotformUser__c/fields/jotform__Url__c.field-meta.xml
<CustomField>
    <fullName>jotform__Url__c</fullName>
    <defaultValue>(&quot;https://www.jotform.com/&quot;)</defaultValue>
    <label>Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>